--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "9",
     "axios": "^0.23.0",
+    "chart.js": "^3.6.0",
     "postcss": "7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
   },
